// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput advanced search 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item pf-m-fill"
      >
        <div
          class="pf-v6-c-text-input-group"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                type="text"
                value="username:player firstname:john"
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          >
            <button
              aria-label="Reset"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-input-group__item pf-m-plain"
      >
        <button
          aria-expanded="false"
          aria-label="Open advanced search"
          class="pf-v6-c-button pf-m-control"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Search"
          class="pf-v6-c-button pf-m-control"
          type="submit"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-icon"
            >
              <span
                class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput advanced search with custom attributes 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="test-id"
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item pf-m-fill"
      >
        <div
          class="pf-v6-c-text-input-group"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                type="text"
                value="username:player firstname:john"
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          >
            <button
              aria-label="Reset"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-input-group__item pf-m-plain"
      >
        <button
          aria-expanded="true"
          aria-label="Open advanced search"
          class="pf-v6-c-button pf-m-control pf-m-expanded"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Search"
          class="pf-v6-c-button pf-m-control"
          type="submit"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-icon"
            >
              <span
                class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class=""
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px; z-index: 9999; opacity: 1; transition: opacity 0ms cubic-bezier(.54, 1.5, .38, 1.11); min-width: 0px; transform: translate(0px, 0px);"
    >
      <div
        class="pf-v6-c-panel pf-m-raised"
      >
        <div
          class="pf-v6-c-panel__main"
        >
          <div
            class="pf-v6-c-panel__main-body"
          >
            <form
              class="pf-v6-c-form"
              novalidate=""
            >
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-label"
                >
                  <label
                    class="pf-v6-c-form__label"
                    for="username_0"
                  >
                    <span
                      class="pf-v6-c-form__label-text"
                    >
                      Username
                    </span>
                  </label>
                    
                </div>
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <span
                    class="pf-v6-c-form-control"
                  >
                    <input
                      aria-invalid="false"
                      id="username_0"
                      type="text"
                      value="player"
                    />
                  </span>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-label"
                >
                  <label
                    class="pf-v6-c-form__label"
                    for="firstname_1"
                  >
                    <span
                      class="pf-v6-c-form__label-text"
                    >
                      First name
                    </span>
                  </label>
                    
                </div>
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <span
                    class="pf-v6-c-form-control"
                  >
                    <input
                      aria-invalid="false"
                      id="firstname_1"
                      type="text"
                      value="john"
                    />
                  </span>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-label"
                >
                  <label
                    class="pf-v6-c-form__label"
                    for="pf-:r0:"
                  >
                    <span
                      class="pf-v6-c-form__label-text"
                    >
                      Has words
                    </span>
                  </label>
                    
                </div>
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <span
                    class="pf-v6-c-form-control"
                  >
                    <input
                      aria-invalid="false"
                      id="pf-:r0:"
                      type="text"
                      value=""
                    />
                  </span>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group"
              >
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <button
                    class="pf-v6-c-button pf-m-link pf-m-inline"
                    type="button"
                  >
                    <span
                      class="pf-v6-c-button__text"
                    >
                      Link
                    </span>
                    <span
                      class="pf-v6-c-button__icon pf-m-end"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0  "
                        width="1em"
                      >
                        <path />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="pf-v6-c-form__group pf-m-action"
              >
                <div
                  class="pf-v6-c-form__group-control"
                >
                  <div
                    class="pf-v6-c-form__actions"
                  >
                    <button
                      class="pf-v6-c-button pf-m-primary"
                      type="submit"
                    >
                      <span
                        class="pf-v6-c-button__text"
                      >
                        Search
                      </span>
                    </button>
                    <button
                      class="pf-v6-c-button pf-m-link"
                      type="reset"
                    >
                      <span
                        class="pf-v6-c-button__text"
                      >
                        Reset
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput renders search input in strict mode 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      class="pf-v6-c-input-group"
    >
      <div
        class="pf-v6-c-input-group__item pf-m-fill"
      >
        <div
          class="pf-v6-c-text-input-group"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                type="text"
                value="username:player firstname:john"
              />
            </span>
          </div>
          <div
            class="pf-v6-c-text-input-group__utilities"
          >
            <button
              aria-label="Reset"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="pf-v6-c-input-group__item pf-m-plain"
      >
        <button
          aria-expanded="false"
          aria-label="Open advanced search"
          class="pf-v6-c-button pf-m-control"
          type="button"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0  "
              width="1em"
            >
              <path />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="pf-v6-c-input-group__item"
      >
        <button
          aria-label="Search"
          class="pf-v6-c-button pf-m-control"
          type="submit"
        >
          <span
            class="pf-v6-c-button__icon"
          >
            <span
              class="pf-v6-c-icon"
            >
              <span
                class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput search input with hint 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-input-group"
  >
    <div
      class="pf-v6-c-input-group__item pf-m-fill"
    >
      <div
        class="pf-v6-c-text-input-group"
      >
        <div
          class="pf-v6-c-text-input-group__main pf-m-icon"
        >
          <span
            class="pf-v6-c-text-input-group__text"
          >
            <input
              aria-hidden="true"
              class="pf-v6-c-text-input-group__text-input pf-m-hint"
              disabled=""
              type="text"
              value="test hint"
            />
            <span
              class="pf-v6-c-text-input-group__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
            <input
              aria-label="simple text input"
              class="pf-v6-c-text-input-group__text-input"
              type="text"
              value="test input"
            />
          </span>
        </div>
        <div
          class="pf-v6-c-text-input-group__utilities"
        >
          <div
            class="pf-v6-c-text-input-group__group"
          >
            <button
              aria-label="Previous"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
            <button
              aria-label="Next"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
          <button
            aria-label="Reset"
            class="pf-v6-c-button pf-m-plain"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-input-group__item"
    >
      <button
        aria-label="Search"
        class="pf-v6-c-button pf-m-control"
        type="submit"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-icon"
          >
            <span
              class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput simple search input 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-input-group"
  >
    <div
      class="pf-v6-c-input-group__item pf-m-fill"
    >
      <div
        class="pf-v6-c-text-input-group"
      >
        <div
          class="pf-v6-c-text-input-group__main pf-m-icon"
        >
          <span
            class="pf-v6-c-text-input-group__text"
          >
            <span
              class="pf-v6-c-text-input-group__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
            <input
              aria-label="simple text input"
              class="pf-v6-c-text-input-group__text-input"
              type="text"
              value="test input"
            />
          </span>
        </div>
        <div
          class="pf-v6-c-text-input-group__utilities"
        >
          <div
            class="pf-v6-c-text-input-group__group"
          >
            <button
              aria-label="Previous"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
            <button
              aria-label="Next"
              class="pf-v6-c-button pf-m-plain"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0  "
                  width="1em"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
          <button
            aria-label="Reset"
            class="pf-v6-c-button pf-m-plain"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-input-group__item"
    >
      <button
        aria-label="Search"
        class="pf-v6-c-button pf-m-control"
        type="submit"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <span
            class="pf-v6-c-icon"
          >
            <span
              class="pf-v6-c-icon__content pf-v6-m-mirror-inline-rtl"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0  "
                width="1em"
              >
                <path />
              </svg>
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
